charge:add moto_wlc_alg driver
-add moto_wlc_alg driver
-solve issue that wireless charGing boot,not in
the charGing status after boot up

Change-Id: I935599ac7681246ef1730a883f4280a0763c4117
Signed-off-by: Jiacheng Ou <oujc1@motorola.com>
Reviewed-on: https://gerrit.mot.com/2207227
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Lu Chai <chailu1@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-moto-base.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-moto-base.dtsi
@@ -11,6 +11,7 @@
 	tboard_thermistor5: thermal-ntc5 { };
 	moto_chg_tcmd: moto_chg_tcmd { };
 	smart_pen_charger: mmi,pen-charger { };
+	moto_wlc: moto_wlc { };
 	hall_1: hall_1 { };
 	hall_2: hall_2 { };
 	hall_3: hall_3 { };
