--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
@@ -48,6 +48,7 @@ CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_dubai_ov50a_mipi_raw mot_dubai_ov32c_mipi_ra
 CONFIG_SND_SMARTPA_AW882XX=y
 CONFIG_SND_I2S1=y
 CONFIG_TYPEC_FSA4480=m
+CONFIG_MOTO_WLC_ALG_SUPPORT=m
 CONFIG_MOTO_CHG_TCMD_SUPPORT=m
 #add for svp
 CONFIG_TRUSTONIC_TEE_SUPPORT=m
