Tesla: arm64/dts: Power off touch regulator when suspend
- For further save current drain when standby, disable the touch
regulator when suspend.

Change-Id: Ifc678ab79b0455df215bc4aa154c567b58337341
Signed-off-by: wengjun1 <wengjun1@motorola.com>
Reviewed-on: https://gerrit.mot.com/2208814
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/tesla-touch.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-touch.dtsi
@@ -54,6 +54,7 @@
 		goodix,stylus-clk-source = "stylus_clk_gpio"; /* use gpio59 as stylus clk*/
 		goodix,pen-enable;
 		mmi,enable-gestures;
+		mmi,power-off-suspend;
 	};
 };
 
