Enable SVP for widevine L1
Add kernel configs to enable SVP function
To merge DRM temp patch from MTK to test widevine L1 function on MT6879

Change-Id: Ie9b7285137e335baaf05c4a2bed1604487048861
Signed-off-by: wufu1 <wufu1@mt.com>
Reviewed-on: https://gerrit.mot.com/2212450
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jiefeng Ou <oujf@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
@@ -624,3 +624,13 @@
 	debounce = <512000>;
 	status = "okay";
 };
+
+/* SVP */
+&mtee_svp {
+	mtee: MTEE {
+		compatible = "mediatek,mtk_svp_on_mtee_support";
+	};
+	svp: SecureVideoPath {
+		compatible = "mediatek,mtk_sec_video_path_support";
+	};
+};
