arm/dts: disable LPD feature
typec/LPD
disable LPD feature

Change-Id: I2feb9f28263e0ae425cf098924c768022f1b22ce
Signed-off-by: chailu1 <chailu1@mt.com>
Reviewed-on: https://gerrit.mot.com/2212556
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-moto-base.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-moto-base.dtsi
@@ -26,3 +26,9 @@
 &charger {
 	/delete-property/ enable_dynamic_mivr;
 };
+
+&mt6375_typec {
+	/delete-property/ tcpc,en_wd;
+	/delete-property/ tcpc,en_wd_sbu_polling;
+	/delete-property/ tcpc,en_wd_polling_only;
+};
