drm/panel: tesla: update the timing for resume and suspend
1. power up vio first.
2. config the right reset timing.


Change-Id: I760c0f02144f200d3334e701bff30f9b429c9275
Signed-off-by: houdz1 <houdz1@mt.com>
Reviewed-on: https://gerrit.mot.com/2217100
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Chuwei Xu <xucw@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/tesla-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-display.dtsi
@@ -59,7 +59,7 @@
 		pins_cmd_dat {
 			pinmux = <PINMUX_GPIO166__FUNC_GPIO166>;
 			slew-rate = <1>;
-			output-high;
+			output-low;
 		};
 	};
 
@@ -73,15 +73,15 @@
 
 	mtkfb_pins_oled_avdd_en0: oled_dvdd_en0_gpio {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO165__FUNC_GPIO165>;
+			pinmux = <PINMUX_GPIO103__FUNC_GPIO103>;
 			slew-rate = <1>;
-			output-high;
+			output-low;
 		};
 	};
 
 	mtkfb_pins_oled_avdd_en1: oled_dvdd_en1_gpio {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO103__FUNC_GPIO103>;
+			pinmux = <PINMUX_GPIO165__FUNC_GPIO165>;
 			slew-rate = <1>;
 			output-low;
 		};
@@ -111,10 +111,10 @@
 		/delete-property/gate-ic;
 
 		compatible = "tianma,nt37701,cmd,144hz";
-		reg = <1>;
-		pm-enable-gpios = <&pio 103 0>,
+		reg = <2>;
+		pm-enable-gpios = <&pio 164 0>,
+                          <&pio 103 0>,
                           <&pio 165 0>,
-                          <&pio 164 0>,
                           <&pio 166 0>;
 		reset-gpios = <&pio 97 0>;
 		pinctrl-names = "default";
@@ -132,10 +132,10 @@
 		/delete-property/gate-ic;
 
 		compatible = "tianma,nt37701,cmd,144hz";
-		reg = <2>;
-		pm-enable-gpios = <&pio 103 0>,
+		reg = <1>;
+		pm-enable-gpios = <&pio 164 0>,
+                          <&pio 103 0>,
                           <&pio 165 0>,
-                          <&pio 164 0>,
                           <&pio 166 0>;
 		reset-gpios = <&pio 97 0>;
 		pinctrl-names = "default";
