--- a/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
@@ -30,6 +30,7 @@
 	UNIT_MULTIPLE = <(1)>;
 	EMBEDDED_SEL = <(1)>;   /* embedded battery*/
 	COM_FG_METER_RESISTANCE = <(0)>;
+	CAR_TUNE_VALUE = <(97)>;
 
 	g_Q_MAX = <
 		/*bat1,   bat2,   bat3,    bat4*/
