Tesla: arm64/dts: Support for charger detection feature
- Enable charger detection feature on MTK platform
which psy name is battery.

Change-Id: I242cc769cc8a67935d12b7e4a5552b592a922c36
Signed-off-by: wengjun1 <wengjun1@motorola.com>
Reviewed-on: https://gerrit.mot.com/2222606
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/tesla-touch.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-touch.dtsi
@@ -55,6 +55,8 @@
 		goodix,pen-enable;
 		mmi,enable-gestures;
 		mmi,power-off-suspend;
+		mmi,usb-charger-detection;
+		mmi,charger-psy-name = "battery";
 	};
 };
 
