Tesla: arm64/dts: Enable corner rejection feature
- Add corner rejection according to rotation feature on tesla
since this project including NA.

Change-Id: If57d1051bcbf0dfa9e59b4561510a373d896c299
Signed-off-by: wengjun1 <wengjun1@motorola.com>
Reviewed-on: https://gerrit.mot.com/2222616
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/tesla-touch.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-touch.dtsi
@@ -53,6 +53,7 @@
 		goodix,stylus_mode-ctrl;
 		goodix,stylus-clk-source = "stylus_clk_gpio"; /* use gpio59 as stylus clk*/
 		goodix,pen-enable;
+		goodix,edge-ctrl;
 		mmi,enable-gestures;
 		mmi,power-off-suspend;
 		mmi,usb-charger-detection;
