arm64/dts:Tesla:audio:disable nouseful mtk smart pa
tesla use aw882xx smart pa.
disable nouseful mtk smart pa.

Change-Id: I6044c2752d8e4954923eb2e222651405d974ab77
Signed-off-by: liaohj <liaohj@mt.com>
Reviewed-on: https://gerrit.mot.com/2226045
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-moto-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-moto-common-overlay.dtsi
@@ -384,7 +384,7 @@
 		compatible = "richtek,rt5512";
 		#sound-dai-cells = <0>;
 		reg = <0x5c>;
-		status = "okay";
+		status = "disabled";
 		sound-name-prefix = "Left";
 	};
 };
