arm/dts: add sc8541 i2c addr
sc8541
add sc8541 i2c addr

Change-Id: I84620b56d940037cf8b7c651837d7f8fec379eb3
Signed-off-by: chailu1 <chailu1@mt.com>
Reviewed-on: https://gerrit.mot.com/2227500
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Jiacheng Ou <oujc1@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key
(cherry picked from commit 38ad71532e47ea5ab7a43abeb61ab6c66ef5ed0a)

--- a/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
@@ -194,6 +194,8 @@
 		interrupt-names = "bq25960_irq";
 		pinctrl-names = "default";
 		pinctrl-0 = <&bq25960_int_default>;
+
+		sc8541-addr = <0x6a>;
 	};
 };
 
