dts: change DBR boot voltage to 3.6V
For moto requirement, DBR boot threshold should be
3.6V.

Change-Id: Ia005a7519914b62406c1c406bd2d9bfcbf032c89
Reviewed-on: https://gerrit.mot.com/2227300
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key
(cherry picked from commit 7487e5a9d4fb08864f614a5282682e5e6cbf93d8)

--- a/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
@@ -85,6 +85,7 @@
 };
 
 &charger {
+	boot_battery_voltage = <3600000>;
 	battery_cv = <4480000>;
 	max_charger_voltage = <14500000>;
 	ac_charger_current = <3000000>;
