--- a/arch/arm64/boot/dts/mediatek/tesla-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-display.dtsi
@@ -118,6 +118,7 @@
                           <&pio 166 0>;
 		reset-gpios = <&pio 97 0>;
 		pinctrl-names = "default";
+		lhbm-enable;
 		port {
 			panel_in2: endpoint {
 				remote-endpoint = <&dsi_out>;
@@ -139,6 +140,7 @@
                           <&pio 166 0>;
 		reset-gpios = <&pio 97 0>;
 		pinctrl-names = "default";
+		lhbm-enable;
 		port {
 			panel_in3: endpoint {
 				remote-endpoint = <&dsi_out>;
