--- a/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
@@ -24,6 +24,7 @@
         reg = <0x34>;
         irq-gpio = <&pio 4 0x0>;
         sound-channel = <0>;
+        vcalb_half = "true";
         status = "okay";
     };
 
@@ -33,6 +34,7 @@
         reg = <0x35>;
         irq-gpio = <&pio 62 0x0>;
         sound-channel = <1>;
+        vcalb_half = "true";
         status = "okay";
     };
 
