charge: improve hardware reset for kpoc
there are some pd charge adapter, it is not a standard
pd spec. if send hardreset type C interface will disconnect
so add a workaround solution. if hardreset and plug out
happen will not report to kpoc upper layer, otherwise
will trigger power off and could not charge into charge
only mode.

Change-Id: Iddb5f33e7c690b35492429516dc6b067af72090f
Reviewed-on: https://gerrit.mot.com/2240987
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Jiacheng Ou <oujc1@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key
(cherry picked from commit 5376def7bb4dfd6d4ca673322d716bb437234dda)

--- a/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
@@ -84,6 +84,10 @@
 	sc_input_current = <3000000>;
 };
 
+&mtk_ctd {
+	bootmode = <&chosen>;
+};
+
 &charger {
 	boot_battery_voltage = <3600000>;
 	battery_cv = <4480000>;
