arm64/DTS: Enable SVP for widevine L1
Add kernel configs to enable SVP function
To merge DRM temp patch from MTK to test widevine L1 function on MT6789

this change is to port change at: 2212450
referenced by idart change: (CR)

Change-Id: Iadf193bc6f3176e6444e07d56adfa05036ef0fbd
Signed-off-by: xiewen3 <xiewen3@motorola.com>
Reviewed-on: https://gerrit.mot.com/2250281
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Submit-Approved: Jira Key
Tested-by: Jira Key
Reviewed-by: Wang Wang <wangwang1@mt.com>
Reviewed-on: https://gerrit.mot.com/2255626

--- a/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
@@ -141,4 +141,14 @@
 	cd-gpios = <&pio 7 GPIO_ACTIVE_HIGH>;
 };
 
+/* SVP */
+&mtee_svp {
+	mtee: MTEE {
+		compatible = "mediatek,mtk_svp_on_mtee_support";
+	};
+	svp: SecureVideoPath {
+		compatible = "mediatek,mtk_sec_video_path_support";
+	};
+};
+
 /*End of this file, DO NOT ADD ANYTHING HERE*/
