wireless_charge: export get_vbus/get_uisoc
cps4035 driver need get vbus/uisoc to
decide whether to update fw

Change-Id: Ieb499ee7a2d415ceea70d2a77b9ac083368b530d
Signed-off-by: Jiacheng Ou <oujc1@motorola.com>
Reviewed-on: https://gerrit.mot.com/2251318
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Lu Chai <chailu1@motorola.com>
Reviewed-by: Wei Wei <weiweij@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key
(cherry picked from commit 5975e5faefb6f477632ce25fda3a11fef419fba6)

--- a/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
@@ -311,6 +311,7 @@
 
     cps_wls_charger@30 {
         compatible = "cps,wls-charger-cps4035-L";
+        charger = <&mt6375_chg>;
         wireless-fw-name = "cps4035.bin";
         reg = <0x30>;
         cps_wls_int = <&pio 31 0x0>;
