dts: sar: aw9610x bringup
dts
init the dts of aw9610x

Change-Id: Ie2a37a3641e01d0802b5dd8ee6d04221ecceef45
Signed-off-by: zhangh12 <zhangh12@motorola.com>
Reviewed-on: https://gerrit.mot.com/2251752
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Submit-Approved: Jira Key
Tested-by: Jira Key
Reviewed-by: Yuchang Guo <guoyc1@mt.com>
(cherry picked from commit 5d3415a956ed333d0063fedf55fc857f1c30af44)
Reviewed-on: https://gerrit.mot.com/2254358
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>

--- a/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
@@ -95,6 +95,24 @@
 	};
 };
 
+&i2c0 {
+	status = "okay";
+	aw9610x_sar@12 {
+		compatible = "awinic,aw9610x_sar_0";
+		reg = <0x12>;
+		irq-gpio = <&pio 13 0x0>;
+                chip_name = "AW96105";
+		sar-num = <0>;
+		aw9610x,channel_number = <0x3>;
+		ch0_name = "capsense_bottom_left";
+		ch1_name = "capsense_top";
+		ch2_name = "capsense_bottom_right";
+		aw9610x,using-firmware;
+                aw9610x,firmware_name = "aw9610x_0";
+		status = "okay";
+	};
+};
+
 &sound {
 	mediatek,spk-i2s = <3 0>;
 	mediatek,speaker-codec {
