mt6789: Enable real Trustonic TEE mobicore driver.
By default the mobicore and associated RPMB drivers which are built
on top of Trustonic Kinibi 510 are disabled due to the missing dtsi
flag, we are now adding the attribute back to the device tree node
to support the features.

Change-Id: Ic0bb4ecac7f9deb69f376e087a7503462619012c
Signed-off-by: xiewen3 <xiewen3@motorola.com>
Reviewed-on: https://gerrit.mot.com/2252396
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Submit-Approved: Jira Key
Tested-by: Jira Key
Reviewed-by: Wang Wang <wangwang1@mt.com>
(cherry picked from commit 076c0ca153b5df9efdfe480f2540ba56fc57b6ad)
Reviewed-on: https://gerrit.mot.com/2255630

--- a/arch/arm64/boot/dts/mediatek/mt6789.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6789.dts
@@ -2803,6 +2803,7 @@
 		/* Trustonic Mobicore SW IRQ number 147 = 32 + 115 */
 		mobicore: mobicore {
 			compatible = "trustonic,mobicore";
+			trustonic,real-drv = <1>;
 			interrupts = <GIC_SPI 115 IRQ_TYPE_EDGE_RISING 0>;
 		};
 
