Vicky: add csot nt37701a 6.55 inch panel driver
add csot nt37701a 6.55 inch panel driver
for vicky

Change-Id: I34c450a67102b7fb0928c4d7b56788d22bab9378
Signed-off-by: tanhua1 <tanhua1@motorola.com>
Reviewed-on: https://gerrit.mot.com/2254327
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Submit-Approved: Jira Key
Tested-by: Jira Key
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>

--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -832,6 +832,17 @@ config DRM_PANEL_TIANMA_NT37701A_655_FHDP_DPHY_CMD_144HZ
 	  resolution and uses 30-bits RGB per pixel. It provides a
 	  MIPI DSI interface to host.
 
+config DRM_PANEL_CSOT_NT37701A_655_FHDP_DPHY_CMD_144HZ
+	tristate "CSOT 1080*2400 DSC DPHY CMD MODE 144HZ PANEL"
+	depends on OF
+	depends on DRM_MIPI_DSI
+	depends on BACKLIGHT_CLASS_DEVICE
+	help
+	  Say Y here if you want to enable support for CSOT NT7701A DSC
+	  DPHY cmd mode Full HD Plus 144HZ panel. The panel has a 1080x2400
+	  resolution and uses 30-bits RGB per pixel. It provides a
+	  MIPI DSI interface to host.
+
 config DRM_PANEL_MOT_DUMMY_VDO_60HZ
 	tristate "DRM_PANEL_MOT_DUMMY_VDO_60HZ"
 	depends on OF
