--- a/sound/soc/mediatek/Kconfig
+++ b/sound/soc/mediatek/Kconfig
@@ -414,6 +414,12 @@ config MTK_SCP_AUDIO
 	  Select Y if you have such device.
 	  If unsure select "N".
 
+config SND_SMARTPA_AW883XX
+	tristate "SoC Audio for awinic aw883xx series"
+	depends on I2C
+	help
+	  This option enables support for aw883xx series Smart PA.
+
 config SND_SMARTPA_AW882XX
 	tristate "SoC Audio for awinic aw882xx series"
 	depends on I2C
