vicky:update kernel config for audio
add audio pa;
enable config for aw883xx.

Change-Id: I6db2800fa48da2809063d10dcff63bb1e0e93da8
Signed-off-by: yaozm1 <yaozm1@mt.com>

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-vicky.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-vicky.config
@@ -46,8 +46,9 @@ CONFIG_MOTO_WL2864C=m
 CONFIG_MTK_VIDEO_AW36515=m
 CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_dubai_ov50a_mipi_raw mot_dubai_ov32c_mipi_raw mot_dubai_gc02m1b_mipi_raw mot_dubai_hi1336_mipi_raw"
 # CONFIG_RT4831A_I2C is not set
-CONFIG_SND_SMARTPA_AW882XX=y
-CONFIG_SND_I2S1=y
+CONFIG_SND_SMARTPA_AW883XX=y
+# CONFIG_SND_SMARTPA_AW882XX is not set
+# CONFIG_SND_I2S1 is not set
 CONFIG_TYPEC_FSA4480=m
 CONFIG_MOTO_WLC_ALG_SUPPORT=m
 CONFIG_MOTO_CHG_TCMD_SUPPORT=m
