arm/dts:add audio dtsi for vicky
add audio dtsi;
for evb bringup.

Change-Id: I0a1179ca41690c845aac48839e6807f0a07b87a5
Signed-off-by: yaozm1 <yaozm1@mt.com>

--- a/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
@@ -13,6 +13,7 @@
 #include "mediatek/mt6789-moto-common-overlay.dtsi"
 #include "mediatek/cust_mt6789_camera.dtsi"
 #include "mediatek/vicky-display.dtsi"
+#include "mediatek/mt6789-vicky-audio-overlay.dtsi"
 
 &dispsys_config {
 	pinctrl-names =
