--- a/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
@@ -14,6 +14,7 @@
 #include "mediatek/cust_mt6789_camera.dtsi"
 #include "mediatek/vicky-display.dtsi"
 #include "mediatek/mt6789-vicky-audio-overlay.dtsi"
+#include "mediatek/vicky-touch.dtsi"
 
 &dispsys_config {
 	pinctrl-names =
