vicky sdcard init
Change-Id: I1af7ace78bb4c534a750286de264e5c66467f57b
Signed-off-by: hq104 <hq104@motorola.com>
Reviewed-on: https://gerrit.mot.com/2254590
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Submit-Approved: Jira Key
Tested-by: Jira Key
Reviewed-by: Wei Deng <dengwei1@motorola.com>

--- a/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
@@ -10,6 +10,7 @@
  * GNU General Public License for more details.
  */
 
+#include <dt-bindings/gpio/gpio.h>
 #include "mediatek/mt6789-moto-common-overlay.dtsi"
 #include "mediatek/cust_mt6789_camera.dtsi"
 #include "mediatek/vicky-display.dtsi"
@@ -120,6 +121,11 @@
 	mediatek,speaker-codec {
 		sound-dai = <&spk>;
 	};
+};
+
+/* sdcard */
+&mmc1 {
+	cd-gpios = <&pio 7 GPIO_ACTIVE_HIGH>;
 };
 
 /*End of this file, DO NOT ADD ANYTHING HERE*/
