vicky: modem: kernel config for modem
 CONFIG_MTK_MD1_SUPPORT = 9 
 
 9 is Lf/Lt/W/G mode 
Change-Id: Ibd4fb4de33b3ab821a8c10fc32e94a6a96ee119b
Reviewed-on: https://gerrit.mot.com/2255489
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Submit-Approved: Jira Key
Tested-by: Jira Key
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510.config
@@ -19,3 +19,6 @@ CONFIG_FSCRYPT_WRAPED_KEY_MODE_SUPPORT=y
 
 # Enable DRDI feature
 CONFIG_MOTO_DRDI_SUPPORT=y
+
+# Set modem to Lf/Lt/W/G mode
+CONFIG_MTK_MD1_SUPPORT=9
