arm64/dts: add fps device tree
Victory:
Add fod device tree

Signed-off-by: Yan Zhang <zhangy26@motorola.com>
Change-Id: I0a4d7317220dbc7d427917fe04b6135b4f7178cb
Reviewed-on: https://gerrit.mot.com/2255894
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Submit-Approved: Jira Key
Tested-by: Jira Key
Reviewed-by: Lu Lu <lulu2@mt.com>

--- a/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
@@ -16,7 +16,7 @@
 #include "mediatek/vicky-display.dtsi"
 #include "mediatek/mt6789-vicky-audio-overlay.dtsi"
 #include "mediatek/vicky-touch.dtsi"
-
+#include "mediatek/mt6789-vicky-fps-overlay.dtsi"
 &dispsys_config {
 	pinctrl-names =
 		"lcm_rst_out1_gpio", "lcm_rst_out0_gpio",
